--- a/LEATS Project/Views/Administrators/Create.cshtml
+++ b/LEATS Project/Views/Administrators/Create.cshtml
@@ -16,12 +16,12 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
 
-            @Html.LabelFor(model => model.Id, "Id")
+            @*@Html.LabelFor(model => model.Id, "Id")*@
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.Id, new List<SelectListItem>
            {
                new SelectListItem {Text = Session["ActiveUser"].ToString(), Selected = true },
-           }, htmlAttributes: new { @class = "form-control"})
+           }, htmlAttributes: new { @class = "form-control", @style = "display:none" })
                 @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
             </div>
         </div>
