--- a/LEATS Project/Views/Administrators/Edit.cshtml
+++ b/LEATS Project/Views/Administrators/Edit.cshtml
@@ -13,12 +13,12 @@
         @Html.HiddenFor(model => model.AdministratorID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Id, "Id")
+            @*@Html.LabelFor(model => model.Id, "Id")*@
             <div class="col-md-10">
                @Html.DropDownListFor(model => model.Id, new List<SelectListItem>
            {
                new SelectListItem {Text = Session["ActiveUser"].ToString(), Selected = true },
-           }, htmlAttributes: new { @class = "form-control" })
+           }, htmlAttributes: new { @class = "form-control", @style = "display:none" })
                 @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -105,7 +105,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Suburb)
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Suburb)
+                @Html.EditorFor(model => model.Suburb, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Suburb, "", new { @class = "text-danger" })
             </div>
         </div>
