--- a/LEATS Project/Views/Appointments/Create.cshtml
+++ b/LEATS Project/Views/Appointments/Create.cshtml
@@ -11,7 +11,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.StudentD, "StudentD")
+            @*@Html.LabelFor(model => model.StudentD, "StudentD")*@
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.StudentD, new List<SelectListItem>
            {
@@ -22,7 +22,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TutorID, "TutorID")
+            @*@Html.LabelFor(model => model.TutorID, "TutorID")*@
             <div class="col-md-10">
                 
                 @Html.DropDownListFor(model => model.TutorID, new List<SelectListItem>
