--- a/LEATS Project/Views/Appointments/Edit.cshtml
+++ b/LEATS Project/Views/Appointments/Edit.cshtml
@@ -19,7 +19,10 @@
         <div class="form-group">
             
             <div class="col-md-10">
-                @Html.DropDownList("StudentD", null, htmlAttributes: new { @class = "form-control",@style = "display:none" })
+               @Html.DropDownListFor(model => model.StudentD, new List<SelectListItem>
+           {
+               new SelectListItem {Text = Session["ActiveStudentID"].ToString(), Value = Session["ActiveStudentID"].ToString(), Selected = true },
+           }, htmlAttributes: new { @class = "form-control", @style = "display:none" })
                 @Html.ValidationMessageFor(model => model.StudentD, "", new { @class = "text-danger",})
             </div>
         </div>
