--- a/LEATS Project/Views/Students/Create.cshtml
+++ b/LEATS Project/Views/Students/Create.cshtml
@@ -214,7 +214,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                @Html.ActionLink("Skip this step", "Index", "Home")
+                @Html.ActionLink("Skip this step", "InsideIndex", "Home")
             </div>
         </div>
     </div>
